--- a/nginx.conf
+++ b/nginx.conf
@@ -7,56 +7,60 @@ events {
 }
 
 http {
+  server_tokens off;
   access_log off;
   sendfile        on;
-#  upstream app {
-#    server 127.0.0.1:8080;
-#  }
   include       /etc/nginx/mime.types;
-#  proxy_cache_path  /dev/shm/nginx_cache    levels=1   keys_zone=one:200m;
   keepalive_timeout   3000;
 
-perl_require Plack/Handler/Nginx.pm;
+  open_file_cache max=100000 inactive=20s;
+  open_file_cache_valid 30s;
+  open_file_cache_min_uses 2;
+  open_file_cache_errors on;
+
+  etag off;
+
+  perl_require Plack/Handler/Nginx.pm;
 
   server {
     root /home/isucon/webapp/public/;
     index index.html;
 
-#    if ($cookie_isu4_session) {
-#        rewrite  ^/(.*)$  /user/$1 last;
-#    }
+    location = / {
+      if ($cookie_isu4_flash) {
+        rewrite  ^  /index.$cookie_isu4_flash.html last;
+      }
+    }
+    location = /index.1.html {
+      add_header  Set-Cookie "isu4_flash=$cookie_isu4_flash; path=/; HttpOnly; expires=Fri, 31-Dec    -1999 23:59:59 GMT";
+    }
+    location = /index.2.html {
+      add_header  Set-Cookie "isu4_flash=$cookie_isu4_flash; path=/; HttpOnly; expires=Fri, 31-Dec    -1999 23:59:59 GMT";
+    }
+    location = /index.3.html {
+      add_header  Set-Cookie "isu4_flash=$cookie_isu4_flash; path=/; HttpOnly; expires=Fri, 31-Dec    -1999 23:59:59 GMT";
+    }
+    location = /index.4.html {
+      add_header  Set-Cookie "isu4_flash=$cookie_isu4_flash; path=/; HttpOnly; expires=Fri, 31-Dec    -1999 23:59:59 GMT";
+    }
 
-    location /protected/ {
-        internal;
-        alias /home/isucon/webapp/public/;
+    location = /login {
+      set $psgi '/home/isucon/webapp/perl/isucon4.psgi';
+      perl Plack::Handler::Nginx::handler;
     }
-    location /user/protected/ {
-        internal;
-        alias /home/isucon/webapp/public/;
+    location = /mypage {
+      set $psgi '/home/isucon/webapp/perl/isucon4.psgi';
+      perl Plack::Handler::Nginx::handler;
     }
-    location / {
-#          proxy_pass http://app;
-            set $psgi '/home/isucon/webapp/perl/isucon4.psgi';
-            perl Plack::Handler::Nginx::handler;
-      #proxy_cache one;
-      #proxy_cache_valid  200 1;
+    location = /report {
+      set $psgi '/home/isucon/webapp/perl/isucon4.psgi';
+      perl Plack::Handler::Nginx::handler;
     }
-#    location /user {
-#        proxy_pass http://app;
-#        proxy_set_header Host $host;
-#        proxy_set_header X_ISUCON_SESSION_ID $cookie_isu4_session;
-#    }
 
     location /stylesheets {
         alias /home/isucon/webapp/public/stylesheets/;
     }
     location /images {
-        alias /home/isucon/webapp/public/images/;
-    }
-    location /user/stylesheets {
-        alias /home/isucon/webapp/public/stylesheets/;
-    }
-    location /user/images {
         alias /home/isucon/webapp/public/images/;
     }
   }
