--- a/nginx.conf
+++ b/nginx.conf
@@ -25,6 +25,7 @@ http {
   server {
     root /home/isucon/webapp/public/;
     index index.html;
+    charset Shift_JIS;
 
     location = / {
       if ($cookie_isu4_flash) {
